# ham_radio

./: .gitmodules  LICENSE  README.md
align/: .gitignore  README.txt  ablock.py  align_band.py  align_band_precal.py  bands.py  cal_thru.py  data.py  dump_cal.py  hp8560e.py  noisy.py  plot_csv.py  requirements.txt  test.py  trace_test.py
antennas/beater/: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
antennas/beater/designs/: DESIGN.md  VHF_UHF_SATELLITE_DESIGN.md  eggbeater-circle-performance.html  eggbeater-performance.html  eggbeater-squircle-performance.html  eggbeater_2m.nec  eggbeater_70cm.nec  satellite_pair.input.json  satellite_pair.json  satellite_pair.result.json  satellite_pair_circle.result.json  satellite_pair_squircle.input.json  satellite_pair_squircle.json  satellite_pair_squircle.result.json
antennas/beater/src/beater/: __init__.py  cli.py  conductor.py  design.py  geometry.py  nec.py  plot.py  report.py  result.py  spec.py  viewer.js
antennas/beater/tests/: test_cli.py  test_conductor.py  test_geometry.py  test_nec.py  test_result.py  test_spec.py
aprs/: aprx.conf
audio/: Makefile  mk_test_wav.sh  wav_spliter.py  wav_splitter.py
cutoff/: .gitignore  cutoff.html  cutoff.kicad_pcb  cutoff.kicad_pro  cutoff.kicad_sch  cutoff.xml
docs/: CLAUDE.md  antenna-matching-tests.md  antenna-matching.html  index.html  sherwood.html
draws/: direwolf.conf  draws_alsa_set.sh  start_ax25.sh
jamclock/: .gitignore  Makefile  adjtime.c  adjtimex.c  jamclock.c
kat500/: README.md  band_plan.py  elecraft.py  train_kat500.py
locextr/: wx_pch.h  (+9 more)
(+110 files in other folders)
