[project]
name = "beater"
version = "0.1.0"
description = "Eggbeater antenna dimension generator with nec2c tuning"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
beater = "beater.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The nec2c sample output is a fixed-column fixture and must not be reflowed.
"tests/test_nec.py" = ["E501"]
